semi-final changes for back
